# auth/internal/model/oauthclient.go
@@ -1,9 +1,10 @@
 package model
 
 type OauthClient struct {
-	ID          uint   `gorm:"primaryKey"`
-	ClientID    string `gorm:"unique;not null"`
-	Secret      string
+	ID       uint   `gorm:"primaryKey"`
+	ClientID string `gorm:"unique;not null"`
+	Secret   string
+
 	RedirectUri string `gorm:"not null"`
 	Scopes      string `gorm:"not null"`
 }
